export default class Service {
    
}
