@startuml

package Store{
    class Store{
        Array<Account>: Accounts
        Array<Service>: Services
        Array<Provider>: Providers
        public export(): JSON
    }

    package AccountStore{
        interface Accounts <<(A,#FF5555) Array>>{
            Account
        }
    }

    package ServiceStore{
        interface Services <<(A,#FF5555) Array>>{
            Service
        }
        interface Providers <<(A,#FF5555) Array>>{
            Provider
        }
    }

    Store o-- Accounts
    Store o-- Services
    Store o-- Providers
}

package "AccountData" {
    interface Account<<(O,#7777FF)Object>>{
        String: id
        String: ServiceName
        String: ProviderDomain <<optional>>
        authorizationData: authorizedData
    }

    interface AuthorizationData<<(O,#7777FF)Object>>{
        String: token
        String: tokenSecret

        String: refreshToken <<optional>>
        Date: tokenAcquisitionDate <<optional>>
        String: tokenExpiredTime <<optional>>
    }

    Account "1" o-- "1" AuthorizationData
}

package "Service" {
    interface Service<<(O,#7777FF)Object>>{
        String: serviceName
        ApiSet: apiGroup
        DataSet: keyObject{dataSet}
        Provider OR {[key]: Provider}: provider
    }

    interface Provider<<(O,#7777FF)Object>>{
        URL: baseUrl
        String: domain

        String: APIKey
        String: APISecret
    }

    interface APISet<<(O,#7777FF)Object>>{
        Category: Authorization
        Category: RealTimeConnection

        Category: etc...
    }

    interface DataSet<<(0, #7777FF)Object>>{
        String: datumName <<key>>
        String: targetName
        String: extendErrorCheck <<optional>>
        String: targetParameterName <<optional>>
        Object: Schema
    }

    interface Unit<<(O,#7777FF)Object>>{
        String: path
        String: HttpMethod
        ParameterDefinition: paramDef
        DataSet: DatumInfo
    }

    interface Interaction<<(O,#7777FF)Object>>{

    }

    Service "1" o-- "n" Provider
    Service "1" o-- "n" DataSet
    Service "1" o-- "1" APISet
    APISet "1"  o-- "n" Unit
    Unit - DataSet : Related with Key
    Unit "1" o-- "1" Interaction
}

Account *-- Service : Related with 'ServiceName'
Account *-- Provider : Related with 'ProviderName'

Accounts o-- Account
Services o-- Service
Providers o-- Provider
Services - Providers : Related

@enduml
